--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,8 @@
 FRONTEND_URL = "http://localhost:5173"
 MONGODB_URI = mongodb://localhost:27017/blinkit
-RESEND_API = re_hvNT2NVP_LGuzjF19E4AFJv8hunB1MWQZ
+EMAIL_USER=bitebuzzsofficial@gmail.com
+EMAIL_PASS=tdnn fvpx gwom ndlj
+RESEND_API = re_2kcvmkqY_NE3WjbLYpgfA9HgEcJM14ZmZ
 SECRET_KEY_ACCESS_TOKEN = eqtuweopituweoituklasjdggksdjglk
 SECRET_KEY_REFRESH_TOKEN = KLDASJGKLTWEOIUTQOIJKASDLGJ
 CLODINARY_CLOUD_NAME = dt9xkhoz9
