--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 FRONTEND_URL = "http://localhost:5173"
-MONGODB_URI = mongodb://localhost:27017/blinkit
+MONGODB_URI = mongodb+srv://sujal6067:DicJEYyVC8BCS6Wq@cluster0.sv2dflu.mongodb.net/Blinkit
 EMAIL_USER=bitebuzzsofficial@gmail.com
 EMAIL_PASS=tdnn fvpx gwom ndlj
 # RESEND_API = re_2kcvmkqY_NE3WjbLYpgfA9HgEcJM14ZmZ
